--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -6,4 +6,5 @@
   --color-light-grayish-cyan: hsl(185, 41%, 84%);
   --color-very-light-grayish-cyan: hsl(189, 41%, 97%);
   --color-white: hsl(0, 0%, 100%);
+  --color-error: hsl(13, 70%, 60%);
 }
