--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -28,6 +28,36 @@
     }
 
     .selectTipContainer {
+      .selectTip {
+        display: grid;
+        grid-template-rows: repeat(2, auto);
+        grid-template-columns: repeat(3, auto);
+
+        label {
+          display: inline-block;
+          background-color: #ddd;
+          padding: 10px 20px;
+          font-family: sans-serif, Arial;
+          font-size: 16px;
+          border: 2px solid #444;
+          border-radius: 4px;
+
+          input[type='radio'] {
+            opacity: 0;
+            position: fixed;
+            width: 0;
+
+            &:checked + label {
+              background-color: #bfb;
+              border-color: #4c4;
+            }
+
+            &:focus + label {
+              border: 2px dashed #444;
+            }
+          }
+        }
+      }
     }
 
     .numberOfPeopleContainer {
