--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -15,8 +15,9 @@
   .calculatorContainer {
     background-color: var(--color-white);
     height: 100%;
+    width: 375px;
     display: grid;
-    grid-template-rows: repeat(4, auto);
+    grid-template-rows: 6.5rem repeat(3, auto);
     border-top-left-radius: 1.5rem;
     border-top-right-radius: 1.5rem;
     padding: 2rem;
@@ -28,33 +29,37 @@
     }
 
     .selectTipContainer {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
       .selectTip {
         display: grid;
-        grid-template-rows: repeat(2, auto);
-        grid-template-columns: repeat(3, auto);
+        grid-template-rows: repeat(3, auto);
+        grid-column-gap: 0.5rem;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        grid-row-gap: 0.5rem;
 
         label {
-          display: inline-block;
-          background-color: #ddd;
-          padding: 10px 20px;
-          font-family: sans-serif, Arial;
-          font-size: 16px;
-          border: 2px solid #444;
-          border-radius: 4px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 3rem;
+          background-color: var(--color-very-dark-cyan);
+          color: white;
+          font-size: 24px;
+          border-radius: 0.25rem;
+          cursor: pointer;
 
           input[type='radio'] {
             opacity: 0;
             position: fixed;
             width: 0;
+          }
 
-            &:checked + label {
-              background-color: #bfb;
-              border-color: #4c4;
-            }
-
-            &:focus + label {
-              border: 2px dashed #444;
-            }
+          &.selected {
+            background-color: var(--color-strong-cyan);
+            color: var(--color-very-dark-cyan);
           }
         }
       }
